--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -1,8 +1,9 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
 fastapi==0.115.0
 uvicorn[standard]==0.32.0
 python-multipart==0.0.12
 pillow==11.0.0
 ultralytics==8.0.0
-torch==2.0.0 --index-url https://download.pytorch.org/whl/cpu
-torchvision==0.15.0 --index-url https://download.pytorch.org/whl/cpu
+torch==2.0.0
+torchvision==0.15.0
 
