--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,21 @@ dist
 dist-ssr
 *.local
 
+# Python
+venv/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.egg-info
+.pytest_cache/
+
+# Local development scripts
+src/api/start_local.sh
+src/api/install_local.sh
+src/api/fix_install.sh
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
