--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -5,6 +5,6 @@ python-multipart==0.0.12
 pillow==11.0.0
 opencv-python-headless==4.8.1.78
 ultralytics==8.3.0
-torch==2.2.0+cpu
-torchvision==0.17.0+cpu
+torch==2.2.0
+torchvision==0.17.0
 
